[package]
name = "rust-adcs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "libdcerpc-sys", "libdcerpc", "cryptography-rs/cryptographic-message-syntax", "cryptography-rs/x509-certificate", "bcder-derive" ]

[workspace.dependencies]
thiserror = "1.0.38"
hex = "0.4.3"

[dependencies]
thiserror.workspace = true
hex.workspace = true
cross-krb5 = "0.3.0"
ldap3 = { version = "0.11.1", default-features = false, features = ["gssapi", "tls", "sync"] }
libdcerpc = { path = "libdcerpc" }
cryptographic-message-syntax = { path = "cryptography-rs/cryptographic-message-syntax" }
x509-certificate = { path = "cryptography-rs/x509-certificate" }
bitflags = "1.3.2"
uuid = "1.3.0"
base64 = "0.21.0"
bcder = "0.7.1"
auto_enums = "0.8.0"
bcder-derive = { path = "bcder-derive" }
ring = "0.16.20"
yaserde_derive = "0.8.0"
yaserde = "0.8.0"
xml-rs = "0.8.4"
log = "0.4.17"
