[package]
name = "libadcs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = [ "bcder-derive", "adcs-submit", "cryptography-rs/x509-certificate", "cryptography-rs/cryptographic-message-syntax", "xtask", "bcder" ]

[workspace.dependencies]
#x509-certificate = "0.19.0"
x509-certificate = { path = "cryptography-rs/x509-certificate" }
thiserror = "1.0.38"
hex = "0.4.3"
bitflags = "2.0.0"
bcder = "0.7.1"
tracing = "0.1.37"

[features]
default = ["policy_https", "enrollment_https", "policy_ldap", "enrollment_rpc"]
policy_ldap = []
policy_https = []
enrollment_rpc = []
enrollment_https = []

[dependencies]
x509-certificate.workspace = true
thiserror.workspace = true
hex.workspace = true
bitflags.workspace = true
bcder.workspace = true
tracing.workspace = true
cross-krb5 = "0.3.0"
ldap3 = { version = "0.11.1", default-features = false, features = ["gssapi", "native-tls", "sync"] }
libdcerpc = { git = "https://github.com/outurnate/dcerpc.git" }
#cryptographic-message-syntax = "0.22.0"
cryptographic-message-syntax = { path = "cryptography-rs/cryptographic-message-syntax" }
uuid = { version = "1.3.0", features = ["v4"] }
base64 = "0.21.0"
auto_enums = "0.8.0"
bcder-derive = { path = "bcder-derive" }
yaserde_derive = "0.8.0"
yaserde = "0.8.0"
xml-rs = "0.8.4"
trust-dns-resolver = { version = "0.22.0" }
itertools = "0.10.5"
rand = "0.8.5"
tokio = { version = "1.26.0", default-features = false, features = ["rt"] }
signature = "2.0.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
bytes = "1.4.0"
anyhow = "1.0.70"
xmltree = "0.10.3"
derive_builder = "0.12.0"
url = "2.3.1"
chrono = "0.4.24"

[dev-dependencies]
test-log = { version = "0.2.11", features = ["log", "trace"] }
env_logger = "0.10.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }