[package]
name = "adcs-submit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
x509-certificate.workspace = true
bcder.workspace = true
thiserror.workspace = true
log.workspace = true
url.workspace = true
simple_logger = { version = "4.0.0", features = ["stderr"] }
libadcs = { path = ".." }
pem = "1.1.1"
bytes = "1.4.0"
clap = { version = "4.1.10", features = ["derive"] }
clap-verbosity-flag = "2.0.0"