[package]
name = "adcs-submit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
x509-certificate.workspace = true
bcder.workspace = true
thiserror.workspace = true
tracing.workspace = true
libadcs = { path = ".." }
pem = "1.1.1"
bytes = "1.4.0"
clap = { version = "4.1.10", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"